--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
