--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
-    "socketio": "^1.0.0"
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
