--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,6 +19,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
     "concurrently": "^7.6.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
