--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
+    "pdfkit": "^0.13.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
